# kosync-light

./: .editorconfig  Cargo.toml  README.md
kindle-extension/: README.md
kindle-extension/kosync-light/: GETTING_STARTED.html  config.xml  menu.json
src/: api.rs  args.rs  main.rs  store.rs
