[package]
name = "kosync-light"
version = "0.1.0"
authors = ["Emma <contact@emmaexe.moe>"]
edition = "2024"
description = "A lightweight implementation of the Koreader Sync Server in rust."
repository = "https://github.com/emmaexe/kosync-light"
license = "AGPL-3.0-only"
license-file = "LICENSE"

[dependencies]
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lexopt = "0.3"
tiny_http = "0.12"
sha2 = "0.10"
